--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
     "url": "git@github.com:4apaev/sync.git"
   },
   "scripts": {
-    "test": "mocha",
-    "debug": "NODE_DEBUG=Sync.Node mocha",
+    "test": "c8 --check-coverage mocha",
+    "debug": "NODE_DEBUG=sync.node mocha",
     "lint": "eslint --fix src",
-    "cover": "npx c8 --check-coverage npm run test"
+    "mocha": "mocha"
   },
   "devDependencies": {
-    "@types/mocha": "^8.2.0",
-    "@types/node": "^14.14.25",
-    "c8": "^7.5.0",
-    "eslint": "^7.19.0",
-    "mocha": "^8.2.1"
+    "@types/mocha": "^8.2.1",
+    "@types/node": "^14.14.31",
+    "c8": "^7.6.0",
+    "eslint": "^7.21.0",
+    "mocha": "^8.3.0"
   }
 }
