--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "mocha": "mocha"
   },
   "devDependencies": {
-    "c8": "^7.6.0",
-    "eslint": "^7.21.0",
-    "mocha": "^8.3.0"
+    "@types/node": "^15.0.2",
+    "c8": "^7.7.2",
+    "eslint": "^7.26.0",
+    "mocha": "^8.4.0"
   }
 }
