--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "mocha": "mocha"
   },
   "devDependencies": {
-    "c8": "^7.6.0",
-    "eslint": "^7.21.0",
-    "mocha": "^8.3.0"
+    "@types/node": "^16.4.0",
+    "c8": "^7.7.3",
+    "eslint": "^7.31.0",
+    "mocha": "^9.0.2"
   }
 }
